[package]
name        = "png-message-encode"
version     = "0.1.0"
authors     = [ "Sanchith Hegde <sanchith.hegde01@gmail.com>" ]
edition     = "2018"
description = "CLI tool to encode messages in PNG files."
readme      = "README.md"
repository  = "https://github.com/SanchithHegde/png-message-encode"
license     = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap      = "3.0.0-beta.2"
crc       = "1.8.1"
thiserror = "1.0.23"

[[bin]]
name = "pngme"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "fat"
