[package]
name        = "png-message-encode"
version     = "0.1.0"
authors     = [ "Sanchith Hegde <sanchith.hegde01@gmail.com>" ]
edition     = "2021"
description = "CLI tool to encode messages in PNG files."
readme      = "README.md"
repository  = "https://github.com/SanchithHegde/png-message-encode"
license     = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap              = { version = "3.1.11", features = [ "color", "derive" ] }
crc               = "3.0.0"
log               = "0.4.16"
pretty_env_logger = "0.4.0"
thiserror         = "1.0.30"

[[bin]]
name = "pngme"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "fat"
